--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "@shared/*": ["app/shared/*"],
       "@main/*": ["app/main/*"],
       "@angular-material/*": ["app/angular-material/*"],
-      "@interceptors/*": ["app/interceptors/*"]
+      "@interceptors/*": ["app/interceptors/*"],
+      "@guards/*": ["app/guards/*"]
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
