--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -21,8 +21,7 @@
       }
     }, {
       "name": "assets",
-      "installMode": "lazy",
-      "updateMode": "prefetch",
+      "installMode": "prefetch",
       "resources": {
         "files": [
           "/assets/**",
