--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-coronavirus",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "scripts": {
     "heroku-postbuild": "ng build --prod",
     "start": "node server.js",
@@ -9,7 +9,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "clean-dist": "rm -rf dist"
   },
   "engines": {
     "node": "12.14.0",
@@ -32,6 +33,7 @@
     "@angular/service-worker": "~9.0.1",
     "chart.js": "^2.9.3",
     "express": "^4.17.1",
+    "js-time-ago": "^2.1.0",
     "ng2-charts": "^2.3.2",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
@@ -40,20 +42,20 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.2",
+    "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/language-service": "~9.0.1",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.3.0",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0"
   }
